--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,11 @@
 services:
   - type: web
     name: what2gift-api
-    env: dotnet
+    env: docker
     plan: free
     region: singapore
-    buildCommand: |
-      dotnet restore
-      dotnet publish -c Release -o out
-    startCommand: dotnet out/What2Gift.Apis.dll
+    dockerfilePath: ./Dockerfile
     envVars:
-      - key: ASPNETCORE_URLS
-        value: http://+:10000
       - key: ConnectionStrings__Database
         fromDatabase:
           name: what2gift-db
