--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: docker
     plan: free
     region: singapore
-    dockerfilePath: ./Dockerfile
+    dockerfilePath: ./What2Gift.Apis/Dockerfile
     envVars:
       - key: ConnectionStrings__Database
         fromDatabase:
