fix appsetting production

--- a/What2Gift.Apis/appsettings.Production.json
+++ b/What2Gift.Apis/appsettings.Production.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=localhost;Port=5432;Database=what2gift;Username=postgres;Password=1234;Include Error Detail=true"
-  },
+    "Database": "Host=dpg-d3frdk2dbo4c73e5qgag-a.oregon-postgres.render.com;Port=5432;Database=what2gift_db;Username=what2gift_db_user;Password=6sIV4jAML7nQqYF1gHqmZkHp80VwCZGE;SSL Mode=Require;Trust Server Certificate=true;"
+  }
+,
   "ClientSettings": {
     "ClientUrl": "http://localhost:3000"
   },
