--- a/What2Gift.Application/What2Gift.Application.csproj
+++ b/What2Gift.Application/What2Gift.Application.csproj
@@ -30,6 +30,7 @@
 
     <ItemGroup>
       <Folder Include="Authentication\" />
+      <Folder Include="Products\SearchProducts\" />
       <Folder Include="Users\" />
     </ItemGroup>
 
