ai suggest product implentment

--- a/What2Gift.Apis/appsettings.Development.json
+++ b/What2Gift.Apis/appsettings.Development.json
@@ -18,5 +18,15 @@
     "SmtpPort": 587,
     "SmtpUsername": "huynguyen.dmx2004@gmail.com",
     "SmtpPassword": "wcgkdudwdjfqreyg"
+  },
+
+  "HuggingFace": {
+    "ApiKey": "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",
+    "EmbeddingModel": "sentence-transformers/all-MiniLM-L12-v2",
+    "ChatModel": "microsoft/DialoGPT-medium"
+  },
+  "Qdrant": {
+    "Url": "http://localhost:6333",
+    "CollectionName": "products"
   }
 }
