--- a/compose.yaml
+++ b/compose.yaml
@@ -30,6 +30,18 @@
       - ACCEPT_EULA=Y
     ports:
       - "8081:80"
+
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: qdrant
+    ports:
+      - "6333:6333"
+      - "6334:6334"
+    volumes:
+      - qdrant_data:/qdrant/storage
+    restart: always
+
       
 volumes:
     pgdata:
+    qdrant_data:
