--- a/What2Gift.Apis/appsettings.json
+++ b/What2Gift.Apis/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "HuggingFace": {
+    "ApiKey": "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",
+    "EmbeddingModel": "sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2",
+    "ChatModel": "microsoft/DialoGPT-medium"
+  },
+  "Qdrant": {
+    "Url": "http://localhost:6333",
+    "CollectionName": "products"
+  }
 }
