gộp lại hàm search

--- a/What2Gift.Apis/appsettings.Development.json
+++ b/What2Gift.Apis/appsettings.Development.json
@@ -23,7 +23,7 @@
   "HuggingFace": {
     "ApiKey": "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",
     "EmbeddingModel": "sentence-transformers/all-MiniLM-L12-v2",
-    "ChatModel": "microsoft/DialoGPT-medium"
+    "ChatModel": "gpt2"
   },
   "Qdrant": {
     "Url": "http://localhost:6333",
