thêm admin controller với đk membership cho user

--- a/What2Gift.Apis/appsettings.json
+++ b/What2Gift.Apis/appsettings.json
@@ -14,5 +14,15 @@
   "Qdrant": {
     "Url": "http://localhost:6333",
     "CollectionName": "products"
+  },
+  "VnPay": {
+    "TmnCode": "NMVI1Y1Z",
+    "HashSecret": "HSGDTE9AA0X0FJE177SMIKLEDFF6O2AF",
+    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "ReturnUrl": "https://corvus-fe.vercel.app/payment/callback"
+  },
+  "Membership": {
+    "DefaultDurationMonths": 1,
+    "MaxConcurrentMemberships": 1
   }
 }
