--- a/What2Gift.Apis/appsettings.Production.json
+++ b/What2Gift.Apis/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=dpg-d3frdk2dbo4c73e5qgag-a.oregon-postgres.render.com;Port=5432;Database=what2gift_db;Username=what2gift_db_user;Password=6sIV4jAML7nQqYF1gHqmZkHp80VwCZGE"
+    "Database": "Host=dpg-d4883hfgi27c73cgigeg-a.singapore-postgres.render.com;Port=5432;Database=what2gift;Username=what2gift_user;Password=ApTABsMJfNkHx1cwUAY7QqWX4VizFwsp;Ssl Mode=Require;Trust Server Certificate=true;"
   }
 ,
   "ClientSettings": {
