thêm top up với payment, hi vọng là commit cuối :)

--- a/What2Gift.Apis/appsettings.json
+++ b/What2Gift.Apis/appsettings.json
@@ -15,11 +15,10 @@
     "Url": "http://localhost:6333",
     "CollectionName": "products"
   },
-  "VnPay": {
-    "TmnCode": "NMVI1Y1Z",
-    "HashSecret": "HSGDTE9AA0X0FJE177SMIKLEDFF6O2AF",
-    "Url": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-    "ReturnUrl": "https://corvus-fe.vercel.app/payment/callback"
+  "BankAccount": {
+    "AccountNumber": "1234567890",
+    "BankName": "Vietcombank",
+    "AccountHolderName": "What2Gift"
   },
   "Membership": {
     "DefaultDurationMonths": 1,
